Refactoring to move any Domino-specific code (except authentication and ODADataServlet) out to separate package Updated specs - we'll store the metaversalId in the ToDo, that makes things much easier
